mad some changes in html and css

--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
 <body>
     
     <nav id="navbar">
-        <ul>
-            <li class="class"> <a href="#home">Home</a></li>
-            <li class="class"> <a href="#test">Test</a></li>
-            <li class="class"> <a href="articles">Articles</a></li>
-            <li class="class"> <a href="feedback">Feedback</a></li>
-        </ul>
+        <a href="#home" class="class" target="_blank">Home</a>
+
+        <a href="#Test" class="class" target="_blank">Test</a>
+
+        <a href="#Articles" class="class" target="_blank">Articles</a>
+
+        <a href="#Anxiety & Stress" class="class" target="_blank">Anxiety And Stress</a>
+
+        <a href="#reviews" class="class" target="_blank">Reviews</a>
+        
     </nav>
-    <section id="home">
+    <section id="home" target=" ">
         <h2 class="primary">We are always there for you!</h2>
     </section>
 </body>
