made changes in css and created a test section

--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
 <body>
     
     <nav id="navbar">
-        <a href="#home" class="class" target="_blank">Home</a>
+        <a href="#home" class="class"  >Home</a>
 
-        <a href="#Test" class="class" target="_blank">Test</a>
+        <a href="#Test" class="class" >Test</a>
 
-        <a href="#Articles" class="class" target="_blank">Articles</a>
+        <a href="#Articles" class="class" >Articles</a>
 
-        <a href="#Anxiety & Stress" class="class" target="_blank">Anxiety And Stress</a>
+        <a href="#Anxiety & Stress" class="class" >Anxiety&Stress</a>
 
-        <a href="#reviews" class="class" target="_blank">Reviews</a>
+        <a href="#reviews" class="class" >Reviews</a>
         
     </nav>
     <section id="home" target=" ">
+        <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
         <h2 class="primary">We are always there for you!</h2>
+    </section>
+    <section id="Test" target=" ">
+        <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
+        <h2 class="primary">Lorem, ipsum dolor.</h2>
     </section>
 </body>
 </html>
