made changes in html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     
     <nav id="navbar">
-        <a href="#home" class="class"  >Home</a>
+        <a href="#home" class="class" >Home</a>
 
-        <a href="#Test" class="class" target="_blank">Test</a>
+        <a href="#Test" class="class" >Test</a>
 
         <a href="#Articles" class="class" >Articles</a>
 
@@ -22,7 +22,12 @@
         
     </nav>
     <section id="home" target=" ">
+        <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
         <h2 class="primary">We are always there for you!</h2>
+    </section>
+    <section id="Test" target=" ">
+        <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
+        <h2 class="primary">test where you stand?</h2>
     </section>
 </body>
 </html>
