made changes in css and html and added articles section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>hackademics
     </title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&family=Sedgwick+Ave+Display&family=Skranji:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -25,9 +26,21 @@
         <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
         <h2 class="primary">We are always there for you!</h2>
     </section>
+    <hr>
+
+
     <section id="Test" target=" ">
         <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
         <h2 class="primary">test where you stand?</h2>
+        <button class="button">Give Test</button>
     </section>
+    <hr>
+
+
+    <section id="Articles" target=" ">
+        <h2 class="primary">Popular Articles on Depression,Anxiety and Stress relief</h2>
+        <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
+    </section>
+
 </body>
 </html>
