Made changes in css and html and added anxietystress section and reviews section

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
         <a href="#Test" class="class" >Test</a>
 
-        <a href="#Articles" class="class" >Articles</a>
+        <a href="#Articles" class="class" >Solutions</a>
 
-        <a href="#Anxiety & Stress" class="class" >Anxiety&Stress</a>
+        <a href="#AnxietyStress" class="class" >Suggestions</a>
 
         <a href="#reviews" class="class" >Reviews</a>
         
     </nav>
     <section id="home" target=" ">
-        <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
+        <img src="https://zenquotes.io/api/image " alt="image">
         <h2 class="primary">We are always there for you!</h2>
     </section>
     <hr>
@@ -32,15 +32,31 @@
     <section id="Test" target=" ">
         <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
         <h2 class="primary">test where you stand?</h2>
-        <button class="button">Give Test</button>
+        <button class="button">Depression Test</button>
+        <button class="button">Stress Test</button>
+        <button class="button">Anxiety Test</button>
     </section>
     <hr>
 
 
     <section id="Articles" target=" ">
-        <h2 class="primary">Popular Articles on Depression,Anxiety and Stress relief</h2>
+        <h2 class="primary">Some Solution on Depression,Anxiety and Stress relief</h2>
         <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
     </section>
+    <hr>
+
+    <section id="AnxietyStress" target=" ">
+        <h2 class="primary"> Some Calming songs and videos </h2>
+        <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image">
+    </section>
+    <hr>
+
+    <section id="reviews" target=" ">
+        <h2 class="primary"> Your thoughts are important </h2>
+        <input type="checkbox" name="your reviews" id="checkbox">
+
+    </section>
+
 
 </body>
 </html>
