--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <section id="reviews" target=" ">
         <h2 class="primary"> Your thoughts are important </h2>
         <input type="checkbox" name="your reviews" id="checkbox">
+        <p class="primary">Feedback</p>
 
     </section>
 
