made changes in website and made changes in home section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@
 
     <!-- home section  -->
     <section id="home" target=" ">
-        <img src="Green and Yellow Gradient Healing Affirmations Self-Care Inspirational Multipage Instagram Post.gif" alt="image">
+        <div id="himage1">
+            <img src="hpg1.png" alt="" class="image">
+        </div>
+        <div class="himage2">
+            <img src="hpg2.png" alt="" class="image">
+        </div>
+        <div class="himage2">
+            <img src="hpg3.png" alt="" class="image">
+        </div>
+        <div class="himage2">
+            <img src="hpg4.png" alt="" class="image">
+        </div>
+    
+            <!-- <img src="hpg5.png" alt="" class="image"> -->
+        <!-- <img src="home quote.gif" alt="image"> -->
         <p class="primary">We are always there for you!</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit neque repellendus facere incidunt, maiores eveniet? Deserunt, optio reprehenderit excepturi quia at corrupti, maiores ut, minima aliquid non voluptatum. Eius provident esse modi autem aliquid.
         </p>
@@ -72,6 +86,11 @@
 
             </ul>
        </div>
+       <div>
+       <img src="Doctorcontactpng.png" class="doctorpng" alt="Doctor contact">
+       <img src="Doctorcontactpng.png" class="doctorpng" alt="Doctor contact">
+       <img src="Doctorcontactpng.png" class="doctorpng" alt="Doctor contact">
+       </div>
 
     <div id="normalsolution">
         <h4 class="head">#Some changes in lifestyle
@@ -94,7 +113,7 @@
     <!-- suggestion section  -->
     <section id="suggestion" target=" ">
         <h2 class="primary"> Some Calming songs and videos</h2>
-        <video width="1920px" height="1080px" controls="controls">
+        <video width="1920px" id="mainvideo" height="1080px" controls="controls">
             <source src="Suggestion Video.mp4" type="video/mp4" />Video
            </video>
         <div id="songs">
