align home section and some changes in solution

--- a/index.html
+++ b/index.html
@@ -28,21 +28,10 @@
 
     <!-- home section  -->
     <section id="home" target=" ">
-        <div id="himage1">
-            <img src="hpg1.png" alt="" class="image">
-        </div>
-        <div class="himage2">
-            <img src="hpg2.png" alt="" class="image">
-        </div>
-        <div class="himage2">
-            <img src="hpg3.png" alt="" class="image">
-        </div>
-        <div class="himage2">
-            <img src="hpg4.png" alt="" class="image">
-        </div>
-    
-            <!-- <img src="hpg5.png" alt="" class="image"> -->
-        <!-- <img src="home quote.gif" alt="image"> -->
+            <img src="hpg1.png" alt="" id="himage1" >
+            <img src="hpg2.png" alt="" id="himage2" >
+          <img src="hpg3.png" alt="" id="himage3" >
+          <img src="hpg4.png" alt="" id="himage4">
         <p class="primary">We are always there for you!</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit neque repellendus facere incidunt, maiores eveniet? Deserunt, optio reprehenderit excepturi quia at corrupti, maiores ut, minima aliquid non voluptatum. Eius provident esse modi autem aliquid.
         </p>
@@ -62,7 +51,6 @@
     <!-- solution section  -->
    <section id="solution" target=" ">
        <h2 class="primary"> Some Solution According To Your Test Results </h2>
-       <!-- <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier." alt="image"> -->
        <div id="Depressionsolution">
            
            <ul class="Depressionsolution" >
@@ -88,8 +76,11 @@
        </div>
        <div>
        <img src="Doctorcontactpng.png" class="doctorpng" alt="Doctor contact">
+       <p class="contactinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque eius qui ipsum alias deleniti? Neque laboriosam magnam natus rerum ratione.</p>
        <img src="Doctorcontactpng.png" class="doctorpng" alt="Doctor contact">
+       <p class="contactinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque eius qui ipsum alias deleniti? Neque laboriosam magnam natus rerum ratione.</p>
        <img src="Doctorcontactpng.png" class="doctorpng" alt="Doctor contact">
+       <p class="contactinfo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque eius qui ipsum alias deleniti? Neque laboriosam magnam natus rerum ratione.</p>
        </div>
 
     <div id="normalsolution">
